Added Item list activity.

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -22,6 +22,14 @@
 				<category android:name="android.intent.category.LAUNCHER" />
 			</intent-filter>
 		</activity>
+		<activity
+			android:name="edu.umkc.smbr5.shoppingbuddy.ItemListActivity"
+			android:label="@string/title_activity_item_list"
+			android:parentActivityName="edu.umkc.smbr5.shoppingbuddy.MainActivity" >
+			<meta-data
+				android:name="android.support.PARENT_ACTIVITY"
+				android:value="edu.umkc.smbr5.shoppingbuddy.MainActivity" />
+		</activity>
 	</application>
 
 </manifest>
